--- a/ui.html
+++ b/ui.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/b26abd2d-57a7-41ad-8890-bffe7b901f8c'>3Pillar Global - Junior UI Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/3pillarglobal/b26abd2d-57a7-41ad-8890-bffe7b901f8c'>3Pillar Global - Junior UI Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -94,11 +94,11 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788691'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1788693'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1788693'>Job Application for Engineering: Lead UI Engineer (UI/UX) at Job Board</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -106,7 +106,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iAdvize/743999692242636-ui-ux-designer-h-f'>iAdvize UI/UX Designer H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://saggezza1.applytojob.com/apply/j0AIz8dZfD/Web-UI-Developer'>Web UI developer - Saggezza - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saggezza1.applytojob.com/apply/j0AIz8dZfD/Web-UI-Developer'>Web UI developer - Saggezza - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -170,7 +170,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
+<h5><a href='https://ah-recruitment.join.com/jobs/265963-system-architect-m-f-d-secure-element'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Hambu... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -198,7 +198,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692216963-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692216963-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -214,7 +214,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oF8G9fwm&__jvst=ER+-+Employee+Referral&__jvsd=sTJmRhwB&__jvsc=Twitter&bid=nLXvSKwk'>Nutanix Careers - Member of Technical Staff (UI-BEAM)</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -401,7 +401,7 @@ and experience Workday! It's fun to work in a company where people truly?...</p>
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/4275/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/4275/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">Iowa City, Iowa, United States</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
